--- a/ZdrowySpacer/ZdrowySpacer/ZdrowySpacer/Mapa.xaml
+++ b/ZdrowySpacer/ZdrowySpacer/ZdrowySpacer/Mapa.xaml
@@ -4,12 +4,10 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="ZdrowySpacer.Mapa">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Tu będzie Mapa!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+            x:Class="ZdrowySpacer.Mapa">
+
+    <mymap:Map x:Name="myloclamap"
+               HorizontalOptions="FillAndExpand"
+               VerticalOptions="FillAndExpand"/>
+   
 </ContentPage>
