--- a/ZdrowySpacer/ZdrowySpacer/ZdrowySpacer/LoginPage.xaml
+++ b/ZdrowySpacer/ZdrowySpacer/ZdrowySpacer/LoginPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ZdrowySpacer.LoginPage"
+             Shell.FlyoutBehavior="Disabled"
              >
     <ContentPage.Content>
         <StackLayout Padding="40" VerticalOptions="Center"
