--- a/ZdrowySpacer/ZdrowySpacer/ZdrowySpacer/Strona_glowna.xaml
+++ b/ZdrowySpacer/ZdrowySpacer/ZdrowySpacer/Strona_glowna.xaml
@@ -5,12 +5,18 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="ZdrowySpacer.Strona_glowna">
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Wyloguj" Clicked="ToolbarItem_Clicked"/>
+    </ContentPage.ToolbarItems>
+
+
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Strona główna!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
-            
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
